--- a/lasagna.css
+++ b/lasagna.css
@@ -57,14 +57,15 @@ body{
     background-color: #FCFAEE;
 }
 
-.homebutton{
+.button{
     border-radius: 5%;
     background-color: #DA8359;
-    border: none;
     text-decoration: none;
-    font-size: 24px;
-    padding: 14px 40px;
+    font-size: 35px;
+    padding: 15px 40px;
     color: #FCFAEE;
-    margin-left: 5%;
-    margin-right: 5%;
+}
+
+.hoch{
+    max-height: 50%;
 }
