wrapped the button in a div and then applied padding to the div now the button is not glued to the bottom of the page

--- a/lasagna.css
+++ b/lasagna.css
@@ -63,9 +63,14 @@ body{
     text-decoration: none;
     font-size: 35px;
     padding: 15px 40px;
+    margin: 0% 70% 10% 5%;
     color: #FCFAEE;
 }
 
 .hoch{
     max-height: 50%;
+}
+
+.wrap{
+    padding: 20px;
 }
